feat: add seller pages

--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,12 @@
     font-family: 'Poppins', sans-serif;
     color: #707070;
 }
+
+@layer base {
+    input[type="number"]::-webkit-inner-spin-button,
+    input[type="number"]::-webkit-outer-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+    }
+  }
+  
